--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Application providing an to environment to curate uploaded user content with a focus on Spanish audio. Built around Flask.
+Application providing an to environment to curate uploaded user content with a focus on Spanish audio. Built around Flask. The site can currently be found here: https://poeticasonora.me/searchhome
